--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Jammming</title>
-    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" type="text/css" href="./reset.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:600"
       rel="stylesheet"
